# ise-mcp

./: .env.example  .gitignore  .mcp.json  EXAMPLE_PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ise_mcp/: __init__.py  client.py  config.py  server.py  spec.py
src/ise_mcp/tools/: __init__.py  anc.py  authn.py  certificates.py  customattributes.py  deployment.py  deviceadmin.py  endpoints.py  guest.py  identity.py  network_devices.py  operations.py  policy.py  posture.py  profiler.py  raw.py  rbac.py  sessions.py  system.py  trustsec.py
tests/: integration_test.py  smoke_test.py  test_client_unit.py
