[project]
name = "ise-mcp"
version = "0.1.0"
description = "MCP server for Cisco Identity Services Engine (ISE) REST APIs (OpenAPI, ERS, MnT)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ise-mcp = "ise_mcp.server:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ise_mcp"]

[tool.pytest.ini_options]
# Only collect the ISE-free unit tests (test_*.py). The live-ISE suites are named
# *_test.py (smoke_test.py, integration_test.py) and are run directly.
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::ResourceWarning"]
